# RAG-MCP

./: .gitignore  DATA_DIRECTORY_CONFIG.md  README.md  chromadb_utils.py  notebook.ipynb  pyproject.toml  rag_server.py  requirements.txt  sample_document.txt  simple_test_llamaparse.py  test_auto_ingest.py  test_data_directory_check.py  test_env_data_dir.py  test_env_db_dir.py  test_rag_server.py
chroma_db/: chroma.sqlite3
src/: main.py  rag_server.py
tests/: simple_test.py
