[project]
name = "mcp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.21",
    "fastmcp>=2.12.3",
    "ipykernel>=6.30.1",
    "llama-index>=0.14.1",
    "llama-parse>=0.6.54",
    "mcp>=1.14.0",
    "python-dotenv>=1.1.1",
]
